--- a/index.html
+++ b/index.html
@@ -37,7 +37,54 @@
       <!-- -----------------about us -->
 
       <!-- -----------------pricing -->
-      Код писать здесь
+      <section class="section pricing">
+        <div class="contener"> 
+          <h2  class="pricing-title">Pricing</h2> 
+          <ul class="pricing-item list">
+            <li class="pricing-list">
+              <a class="pricing-img link">
+                <img src="./images/online.svg" alt="">
+                </a>
+                    <div class="pricing-main">
+                      <h3 class="pricing-upertitle">Self-study online course</h3>
+                      <p class="pricing-content">Start learning English online in live classes
+                          with qualified EC teachers and students 
+                          from all over the world.
+                      </p>
+                      <p> £5.99  per month</p>
+                    </div>
+            </li>
+        </ul>
+    <ul class="pricing-item list">
+        <li class="pricing-list">
+          <a class="pricing-img link">
+            <img src="./images/lesson.svg" alt="">
+          </a>
+            <div class="pricing-main">
+              <h3 class="pricing-upertitle">Live online classes</h3>
+              <p class="pricing-content">Interactive group classes with expert
+                  teachers. Free 7-day trial</p>
+                  <p> £12.99  per month</p>
+            </div>
+        </li>
+    </ul>
+    <ul class="pricing-item list">
+        <li class="pricing-list">
+          <a class="pricing-img link">
+            <img src="./images/webinar.svg" alt="">
+          </a>
+            <div class="pricing-main">
+              <h3 class="pricing-upertitle">Personal Tuition</h3>
+              <p class="pricing-content">
+                  Online one-to-one English tutoring – enjoy
+                  our first session for only $1
+              </p>
+              <p> £12.99  per month</p>
+            </div>
+        </li>
+    </ul>
+  </div>
+  </section>
       <!-- -----------------pricing -->
 
       <!-- -----------------contact us -->
