--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                       </p>
                       <p> £5.99  per month</p>
                     </div>
+                    <div></div>
             </li>
         </ul>
     <ul class="pricing-item list">
