--- a/index.html
+++ b/index.html
@@ -37,55 +37,64 @@
       <!-- -----------------about us -->
 
       <!-- -----------------pricing -->
-      <section class="section pricing">
-        <div class="contener"> 
-          <h2  class="pricing-title">Pricing</h2> 
-          <ul class="pricing-item list">
-            <li class="pricing-list">
-              <a class="pricing-img link">
-                <img src="./images/online.svg" alt="">
-                </a>
-                    <div class="pricing-main">
-                      <h3 class="pricing-upertitle">Self-study online course</h3>
-                      <p class="pricing-content">Start learning English online in live classes
-                          with qualified EC teachers and students 
-                          from all over the world.
-                      </p>
-                      <p> £5.99  per month</p>
-                    </div>
-                    <div></div>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Pricing</h2>
+          <ul class="pricing-list list">
+            <li class="pricing-item">
+              <img
+                src="./images/online.svg"
+                width="280px"
+                height="278px"
+                alt="Девушка за ноутбуком"
+              />
+              <div class="pricing-content-box">
+                <h3 class="pricing-title">Self-study online course</h3>
+
+                <p>
+                  Start learning English online in live classes with qualified
+                  EC teachers and students from all over the world.
+                </p>
+                <div class="content">
+                  <p class="pricing-content">
+                    <span class="pricing-price"> £5.99</span>per month
+                  </p>
+                </div>
+              </div>
             </li>
-        </ul>
-    <ul class="pricing-item list">
-        <li class="pricing-list">
-          <a class="pricing-img link">
-            <img src="./images/lesson.svg" alt="">
-          </a>
-            <div class="pricing-main">
-              <h3 class="pricing-upertitle">Live online classes</h3>
-              <p class="pricing-content">Interactive group classes with expert
-                  teachers. Free 7-day trial</p>
-                  <p> £12.99  per month</p>
-            </div>
-        </li>
-    </ul>
-    <ul class="pricing-item list">
-        <li class="pricing-list">
-          <a class="pricing-img link">
-            <img src="./images/webinar.svg" alt="">
-          </a>
-            <div class="pricing-main">
-              <h3 class="pricing-upertitle">Personal Tuition</h3>
-              <p class="pricing-content">
-                  Online one-to-one English tutoring – enjoy
-                  our first session for only $1
-              </p>
-              <p> £12.99  per month</p>
-            </div>
-        </li>
-    </ul>
-  </div>
-  </section>
+            <li class="pricing-item">
+              <img src="./images/lesson.svg" width="390px" height="247px" alt="" />
+              <div class="pricing-content-box">
+                <h3 class="pricing-title">Live online classes</h3>
+                <p>
+                  Interactive group classes with expert teachers. Free 7-day
+                  trial
+                </p>
+                <div class="content">
+                  <p class="pricing-content">
+                    <span class="pricing-price"> £12.99</span>per month
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="pricing-item">
+              <img src="./images/webinar.svg" width="315px" height="281px" alt="" />
+              <div class="pricing-content-box">
+                <h3 class="pricing-title">Personal Tuition</h3>
+                <p>
+                  Online one-to-one English tutoring – enjoy our first session
+                  for only $1
+                </p>
+                <div class="content">
+                  <p class="pricing-content">
+                    <span class="pricing-price"> £12.99</span>per month
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!-- -----------------pricing -->
 
       <!-- -----------------contact us -->
