--- a/index.html
+++ b/index.html
@@ -42,28 +42,29 @@
           <h2 class="section-title">Pricing</h2>
           <ul class="pricing-list list">
             <li class="pricing-item">
-              <img
+                <img
                 src="./images/online.svg"
                 width="280px"
                 height="278px"
                 alt="Девушка за ноутбуком"
               />
-              <div class="pricing-content-box">
+               <div class="pricing-content-box">
                 <h3 class="pricing-title">Self-study online course</h3>
-
-                <p>
+                 <p>
                   Start learning English online in live classes with qualified
                   EC teachers and students from all over the world.
-                </p>
+                 </p>
                 <div class="content">
-                  <p class="pricing-content">
-                    <span class="pricing-price"> £5.99</span>per month
-                  </p>
+                    <span class="pricing-price"> &#163;5.99</span><span>per month</span>
                 </div>
               </div>
             </li>
             <li class="pricing-item">
-              <img src="./images/lesson.svg" width="390px" height="247px" alt="" />
+                <img 
+                  src="./images/lesson.svg"
+                  width="390px"
+                  height="247px"
+                  alt="Онлайн урок" />
               <div class="pricing-content-box">
                 <h3 class="pricing-title">Live online classes</h3>
                 <p>
@@ -71,24 +72,24 @@
                   trial
                 </p>
                 <div class="content">
-                  <p class="pricing-content">
-                    <span class="pricing-price"> £12.99</span>per month
-                  </p>
+                    <span class="pricing-price"> &#163;12.99</span><span>per month</span>
                 </div>
               </div>
             </li>
             <li class="pricing-item">
-              <img src="./images/webinar.svg" width="315px" height="281px" alt="" />
-              <div class="pricing-content-box">
+                <img 
+                 src="./images/webinar.svg"
+                 width="315px" 
+                 height="281px" 
+                 alt="Персональный учитель" />
+                <div class="pricing-content-box"></a>
                 <h3 class="pricing-title">Personal Tuition</h3>
                 <p>
                   Online one-to-one English tutoring – enjoy our first session
-                  for only $1
+                  for only &#36;1
                 </p>
                 <div class="content">
-                  <p class="pricing-content">
-                    <span class="pricing-price"> £12.99</span>per month
-                  </p>
+                    <span class="pricing-price"> &#163;12.99</span><span>per month</span>
                 </div>
               </div>
             </li>
