--- a/index.html
+++ b/index.html
@@ -99,8 +99,19 @@
       <!-- -----------------pricing -->
 
       <!-- -----------------contact us -->
-      Код писать здесь
+      <!-- Код писать здесь -->
       <!-- -----------------contact us -->
+      <section class="section">
+        <div class="container">
+          <img width="425" height="430" src="./images/contact-us.svg" alt="Наши контакты">
+          <div class="thumb">
+            <h2 class="section-title">Contact Us</h2>
+            <p>Discover your current English level by taking our free online English test. Sign up to our newsletter for learning tips and free resources</p>
+
+          </div>
+        </div>
+        
+      </section>
     </main>
     <!-- ---------------------------------------------main----------------------------------------------------- -->
 
