contact us section

--- a/index.html
+++ b/index.html
@@ -101,16 +101,22 @@
       <!-- -----------------contact us -->
       <!-- Код писать здесь -->
       <!-- -----------------contact us -->
-      <section class="section">
-        <div class="container">
-          <img width="425" height="430" src="./images/contact-us.svg" alt="Наши контакты">
+      <section class="section contact-us">
+        <div class="container contact-us-container">
+            <img class="contact-us-pic" width="390" height="346" src="./images/contact-us.svg" alt="Наши контакты">
           <div class="thumb">
-            <h2 class="section-title">Contact Us</h2>
-            <p>Discover your current English level by taking our free online English test. Sign up to our newsletter for learning tips and free resources</p>
-
+            <h2 class="section-title contact-us-title">Contact Us</h2>
+            <p class="contact-us-desc">Discover your current English level by taking our free online English test. Sign up to our newsletter for learning tips and free resources</p>
+          <form>
+           <div class="contact-us-form">
+             <label class="contact-us-label">
+              <input class="contact-us-mail" type="email" name="mail" placeholder="Enter Your E-mail">
+            </label>
+            <button class="contact-us-button" type="submit">Subscribe</button>
+           </div>
+          </form>
           </div>
         </div>
-        
       </section>
     </main>
     <!-- ---------------------------------------------main----------------------------------------------------- -->
