--- a/index.html
+++ b/index.html
@@ -33,7 +33,39 @@
       <!-- -----------------skills -->
 
       <!-- -----------------about us -->
-      Код писать здесь
+      <section class="about section" id="about">
+        <div class="about-column container">
+          <div class="about-first">
+            <h2 class="section-title">About Us</h2>
+            <p>
+              The model offers a framework for discussing problems related to
+              the user's experience, as well as possible ways and means of
+              solving them. Application development begins at the top level
+              (strategy), where the future software product is described quite
+              abstractly from the point of view of the expectations of both
+              users and the customer.
+            </p>
+            <ul class="checklist list">
+              <li>
+                <p class="number">800</p>
+                <p class="category">Pupils</p>
+              </li>
+              <li>
+                <p class="number">18</p>
+                <p class="category">Teachers</p>
+              </li>
+              <li>
+                <p class="number">6</p>
+                <p class="category">
+                  Foreign <br />
+                  languages
+                </p>
+              </li>
+            </ul>
+          </div>
+          <span class="about-img"></span>
+        </div>
+      </section>
       <!-- -----------------about us -->
 
       <!-- -----------------pricing -->
