--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
           <p class="hero-text">
             With our teachers who write a program for each student, you will be
             able to make your first sketch after the first lesson.
-          </p>
-          <!-- <img src="./images/bulb-icon.svg" alt=""> -->
+          </p>         
           <svg class="lamp" width="122" height="122">
             <use href="./images/icons.svg#icon-bulb"></use>
           </svg>
-          <button class="hero-btn pointer" type="button">Get started</button>
+          <button class="hero-btn pointer" type="button" data-modal-open>Get started</button>
         </div>
         <img  class="hero-image" src="./images/learning-languages.svg" alt="girl in headphones listens to different languages" width="654"
           height="510" />
@@ -89,7 +88,7 @@
           </li>
           <li class="pricing-item">
             <img src="./images/webinar.svg" width="315px" height="281px" alt="Персональный учитель" />
-            <div> <a> class="pricing-content-box"></a>
+            <div class="pricing-content-box"></a>
               <h3 class="pricing-title">Personal Tuition</h3>
               <p>
                 Online one-to-one English tutoring – enjoy our first session
