--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <form>
            <div class="contact-us-form">
              <label class="contact-us-label">
-                <input class="contact-us-mail" type="email" name="mail" placeholder=" ">
+                <input class="contact-us-mail" type="email" name="mail" placeholder=" " required>
               <span class="contact-us-text">Enter Your E-mail</span>
               <svg class="contact-form-icon" width="30" height="30">
 										<use class="icon-attention" href="./images/icons.svg#icon-attention"></use>
