--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!-- ---------------------------------------------header----------------------------------------------------- -->
     <header></header>
     <!-- ---------------------------------------------header----------------------------------------------------- -->
-<header>
-  <section class="section-header">
-    <div class="container header-container">
+<header class="page-header">
+  <section class="section">
+    <div class="header-container">
   <nav class="header-navigation">
     <a href="" class="header, logo">Brit<span class="header-span">lex</span></a>
     <ul class="navigation">
